added function to display and deploy img

--- a/n/index.css
+++ b/n/index.css
@@ -5,100 +5,58 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
-/* Container Styles */
-.container {
+/* Main Container */
+.main-container {
     text-align: center;
     background-color: #fff;
-    padding: 40px;
-    border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    max-width: 1200px;
+    padding: 60px;
+    border-radius: 15px;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
     width: 90%;
-    margin: 60px auto;
-    flex-grow: 1;
 }
 
 /* Header Styles */
-.header-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between; /* Spread out logo and title */
-    gap: 20px; /* Adjust the gap if necessary */
-    position: relative;
+header {
+    margin-bottom: 40px;
 }
 
 .logo {
-    width: 30%; /* Adjust size as needed */
+    width: 50%;
     height: auto;
-    position: absolute;
-    left: 0; /* Align the logo to the left edge of the container */
+    margin-bottom: -90px;
 }
 
 header h1 {
-    flex-grow: 1;
-    margin: 0 auto;
+    font-size: 2.5em;
     color: #333;
-    font-size: 2em;
-    text-align: center; /* Center the title */
 }
 
-header p {
-    color: #777;
-    margin-bottom: 30px;
+/* Information Section */
+.info p {
+    color: #555;
     font-size: 1.2em;
+    line-height: 1.6;
+    margin-bottom: 20px;
 }
 
-/* Drop Area Styles */
-#drop-area {
-    border: 2px dashed #ddd;
-    border-radius: 10px;
-    padding: 40px;
-    background-color: #fafafa;
-    margin-bottom: 30px;
-}
-
-#drop-area:hover {
-    border-color: #bbb;
-    background-color: #f0f0f0;
-}
-
-.drag-text {
-    color: #aaa;
-    font-size: 1em;
-}
-
-#fileElem {
-    display: none;
-}
-
-.button {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #176e08;
+/* Get Started Button */
+.get-started {
+    padding: 15px 30px;
+    background-color: #187108;
     color: #fff;
     border-radius: 5px;
     cursor: pointer;
+    font-size: 1.2em;
+    border: none;
     transition: background-color 0.3s ease;
-    font-size: 1em;
 }
 
-.button:hover {
-    background-color: #0056b3;
-}
-
-/* Gallery Styles */
-#gallery {
-    text-align: left;
-    width: 100%;
-}
-
-#gallery p {
-    font-size: 18px;
-    color: #333;
-    margin-top: 20px;
-    word-wrap: break-word;
+.get-started:hover {
+    background-color: #039531;
 }
